Add "creating tag" to data initializer process